# kuuve

./: README.md
YOLOv8-ROS-TensorRT/: CMakeLists.txt
YOLOv8-ROS-TensorRT/include/segment/: yolov8-seg.hpp
YOLOv8-ROS-TensorRT/launch/: segment.launch
YOLOv8-ROS-TensorRT/msg/: BoundingBox.msg  BoundingBox_vector.msg  delivery.msg
YOLOv8-ROS-TensorRT/src_ros/: segment.cpp
lane_detector/: CMakeLists.txt
lane_detector/include/lane_detector/: ConditionalCompile.h  LaneDetector.h  LaneDetectorNode.h
lane_detector/launch/include/: lane_detector.launch
lane_detector/src/: InToOutLaneDetector.cpp  LaneDetectorNode.cpp
monodepth2_ros/: CMakeLists.txt  README.md  package.xml
vision_final/: CMakeLists.txt  package.xml
vision_final/include/vision_lib/: car_struct.h  vision_lib.hpp
vision_final/launch/: test.launch
vision_final/msg/: ju_msg.msg
vision_final/src/: vision_acc.cpp
yolov8_msgs/msg/: BoundingBox.msg  MaskBox.msg
